--- a/src/main/webapp/WEB-INF/views/treemu.html
+++ b/src/main/webapp/WEB-INF/views/treemu.html
@@ -12,30 +12,30 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="웹문서의 제목 현재 페이지(콘텐츠)의 제목"/>
     <meta property="og:description" content="현재 페이지(콘텐츠)에 대한 설명"/>
-    <meta property="og:image" content="../assets/images/opengraph.png"/>
+    <meta property="og:image" content="<%=request.getContextPath()%>/assets/images/opengraph.png"/>
 
     <!-- ================== BEGIN BASE CSS STYLE ================== -->
-    <link rel="shortcut icon" href="../assets/images/favicon.png" />
-    <link href="../assets/css/default/app.min.css" rel="stylesheet" />
-    <link href="../assets/css//default/theme/blue.min.css" rel="stylesheet" /><!-- 테마컬러 적용 시 추가:aqua,black,blue,green,indigo,lime,orange,pink,purple,red,teal,yellow -->
-    <link href="../assets/css/custom.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="<%=request.getContextPath()%>/assets/images/favicon.png" />
+    <link href="<%=request.getContextPath()%>/assets/css/default/app.min.css" rel="stylesheet" />
+    <link href="<%=request.getContextPath()%>/assets/css//default/theme/blue.min.css" rel="stylesheet" /><!-- 테마컬러 적용 시 추가:aqua,black,blue,green,indigo,lime,orange,pink,purple,red,teal,yellow -->
+    <link href="<%=request.getContextPath()%>/assets/css/custom.css" rel="stylesheet" />
     <!-- ================== END BASE CSS STYLE ================== -->
 
     <!-- ================== BEGIN PAGE LEVEL JS ================== -->
-    <link href="../assets/plugins/jstree/dist/themes/default/style.min.css" rel="stylesheet" />
+    <link href="<%=request.getContextPath()%>/assets/plugins/jstree/dist/themes/default/style.min.css" rel="stylesheet" />
     <!-- ================== END PAGE LEVEL JS ================== -->
     
     <!-- ================== BEGIN BASE JS ================== -->
-	<script src="../assets/js/app.min.js"></script>
-	<script src="../assets/js/theme/default.js"></script>
+	<script src="<%=request.getContextPath()%>/assets/js/app.min.js"></script>
+	<script src="<%=request.getContextPath()%>/assets/js/theme/default.js"></script>
     <!-- ================== END BASE JS ================== -->
     
     <!-- ================== BEGIN PAGE LEVEL JS ================== -->
-	<script src="../assets/plugins/jstree/dist/jstree.min.js"></script>
-	<script src="../assets/js/demo/ui-tree.demo.js"></script>
+	<script src="<%=request.getContextPath()%>/assets/plugins/jstree/dist/jstree.min.js"></script>
+	<script src="<%=request.getContextPath()%>/assets/js/demo/ui-tree.demo.js"></script>
 	<!-- ================== END PAGE LEVEL JS ================== -->
     
-    <title>Victor Admin</title>
+    <title><%=HOME_TITLE%></title>
 </head>
 <body>
 	<!-- begin #page-loader -->
@@ -48,7 +48,7 @@
 	<div id="page-container" class="fade page-sidebar-fixed page-header-fixed">
         <!-- begin #header -->
 		<div id="header" class="header navbar-default bg-theme">
-			<!-- ※※※ html Include 처리 부분 ※※※ -->
+			<%@include file="/inc/header.jsp"%>
 		</div>
 		<!-- end #header -->
 		
@@ -141,7 +141,7 @@
 
         <!-- begin #footer -->
 		<div id="footer" class="footer">
-			<!-- ※※※ html Include 처리 부분 ※※※ -->
+			<%@include file="/inc/footer.jsp"%>
 		</div>
 		<!-- end #footer -->
 		
@@ -164,14 +164,7 @@
     }();
 </script>
 
-<!-- html Include 처리 : 실 개발 시 인클루드 재설정 후 제거 -->
-<script type="text/javascript">
-    $(document).ready(function(){
-        $("#header").load("/inc/front_header.html"),
-        $("#sidebar").load("/inc/front_sidebar.html"),
-        $("#footer").load("/inc/front_footer.html")
-    });
-</script>
+
 
 </body>
 </html>
