--- a/src/main/webapp/WEB-INF/views/board_list-html.html
+++ b/src/main/webapp/WEB-INF/views/board_list-html.html
@@ -21,7 +21,7 @@
     <link href="<%=request.getContextPath()%>/assets/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.css" rel="stylesheet" /><!-- 추가 css: bootstrap-datepicker -->
     <link href="<%=request.getContextPath()%>/assets/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" rel="stylesheet" /><!-- 추가 css: bootstrap-datepicker -->
     <!-- /.추가 CSS -->
-    <link href="../dist/css/custom.css" rel="stylesheet" /><!-- 항상 CSS 최하단-->
+    <link href="<%=request.getContextPath()%>/dist/css/custom.css" rel="stylesheet" /><!-- 항상 CSS 최하단-->
     <!-- ================ /.CSS STYLE ================== -->
 
     <!-- ================== 필수 JS ===================== -->
