--- a/src/main/webapp/WEB-INF/views/board_write-summernote.html
+++ b/src/main/webapp/WEB-INF/views/board_write-summernote.html
@@ -20,7 +20,7 @@
     <!-- 추가 CSS -->
     <link href="<%=request.getContextPath()%>/assets/plugins/summernote/dist/summernote.css" rel="stylesheet" /><!-- 추가 css: summernote -->
     <!-- /.추가 CSS -->
-    <link href="../dist/css/custom.css" rel="stylesheet" /><!-- 항상 CSS 최하단-->
+    <link href="<%=request.getContextPath()%>/dist/css/custom.css" rel="stylesheet" /><!-- 항상 CSS 최하단-->
     <!-- ================ /.CSS STYLE ================== -->
 
     <!-- ================== 필수 JS ===================== -->
